[metadata]
name = pyramid-marshmallow
version = 0.7.0a4

author = Theron Luhn
author_email = theron@luhn.com
description = Validate request and response data with Marshmallow and optionally generate an OpenAPI spec.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/luhn/pyramid-marshmallow
classifiers = 
	Development Status :: 3 - Alpha
	Framework :: Pyramid
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Programming Language :: Python :: Implementation :: CPython
	Programming Language :: Python :: Implementation :: PyPy
	Programming Language :: Python

[options]
packages = find:
python_requires = >=3.7
install_requires =
	pyramid>=1.7
	marshmallow~=3.0
	zope.interface>=3.8.0

[options.extras_require]
openapi =
	apispec>=3.0,<7
	PyYAML>=5.4,<7
testing =
	pytest~=6.2
	webtest~=2.0
linting =
	black~=23.3
	flake8~=6.0.0
	isort~=5.12

[options.entry_points]
console_scripts =
	generate-spec = pyramid_marshmallow.openapi.generate:generate
	serve-spec = pyramid_marshmallow.openapi.serve:serve
